--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,15 +32,22 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+		
+		
+		<form id="url-form" data-bind="submit: send_url"> 
+		  <div class="form-group">
+			<input data-bind="value: url_field" type="url" class="form-control" placeholder="url of an article you want to remember"><br>
+			<input type="submit" value="ask me">
+		  </div>
+		</form>
       </div>
 
     </div><!-- /.container -->
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+	<script src="js/app.js"></script>
   </body>
 </html>
