--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,13 +30,13 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Informate</h1>
+        <p class="lead">Quickly ensure that you'll recall what you read.</p>
 		
 		
 		<form id="url-form" data-bind="submit: send_url"> 
 		  <div class="form-group">
-			<input data-bind="value: url_field" type="url" class="form-control" placeholder="url of an article you want to remember"><br>
+			<input data-bind="value: url_field" type="url" class="form-control" placeholder="url of an article you want to quiz yourself on"><br>
 			<input type="submit" value="ask me">
 		  </div>
 		</form>
