Added dynamically updating frontend.

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,6 +2,6 @@
 <meta name="">
 
 <base href="/">
-<title>App Title</title>=
+<title>Informate - recall what you read</title>
 <link rel="stylesheet" href="/css/bootstrap.css">
 <link rel="stylesheet" href="/css/starter-template.css">
