--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Informate</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -27,24 +27,25 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="main">
 
       <div class="starter-template">
         <h1>Informate</h1>
         <p class="lead">Quickly ensure that you'll recall what you read.</p>
 		
-		
-		<form id="url-form" data-bind="submit: send_url"> 
-		  <div class="form-group">
-			<input data-bind="value: url_field" type="url" class="form-control" placeholder="url of an article you want to quiz yourself on"><br>
-			<input type="submit" value="ask me">
-		  </div>
-		</form>
+				<form id="url-form" data-bind="submit: send_url"> 
+					<div class="form-group">
+					<input data-bind="value: url_field" type="url" class="form-control" placeholder="url of an article you want to quiz yourself on"><br>
+					<input type="submit" value="ask me">
+					</div>
+				</form>
       </div>
 
-    </div><!-- /.container -->
+			<div class="bg-info container-fluid">
+			<span id="plain-text-content" data-bind="text: myTextBox"></s>
+			</div>
+    </div><!-- knockout viewmodel -->
 
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
     <script src="js/bootstrap.min.js"></script>
