--- a/views/home.ejs
+++ b/views/home.ejs
@@ -93,17 +93,16 @@ function resizeText() {
             <div class="delay-03s animated wow zoomIn"><img src="img/service_icon2.png"></img></div>
             <h3 class="animated fadeInUp wow">Recall what you read.</h3>
             <p class="animated fadeInDown wow">Paste in an article and let us quiz you on what you read.</p>
-						
-						<br>
+			<br>
           </div>
 					
-					<div class="animated fadeInDown wow" id="main">
-						<form id="url-form" data-bind="submit: send_url"> 
-							<div class="form-group" style="text-align:center">
-							<input data-bind="value: url_field" type="url" class="form-control" placeholder="url please"><br>
-							<input type="submit" class="btn btn-default" value="quiz me">
-						</form>
-					</div>
+		  <div class="animated fadeInDown wow" id="main">
+			<form id="url-form" data-bind="submit: send_url"> 
+				<div class="form-group" style="text-align:center">
+				<input data-bind="value: url_field" type="url" class="form-control" placeholder="url please"><br>
+				<input type="submit" class="btn btn-default" value="quiz me">
+			</form>
+		  </div>
 
 			<div class="bg-info container-fluid">
 			<span id="plain-text-content" data-bind="text: myTextBox"></s>
@@ -299,5 +298,7 @@ $( window ).load(function() {
 	return false;
 });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
