--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@ function resizeText() {
 </header>
 
 
-
+<div id="main">
 <!--First slide-->
 <section  id="service">
   <div class="container">
@@ -93,21 +93,16 @@ function resizeText() {
             <div class="delay-03s animated wow zoomIn"><img src="img/service_icon2.png"></img></div>
             <h3 class="animated fadeInUp wow">Recall what you read.</h3>
             <p class="animated fadeInDown wow">Paste in an article and let us quiz you on what you read.</p>
-			<br>
+						<br>
           </div>
 					
-		  <div class="animated fadeInDown wow" id="main">
-			<form id="url-form" data-bind="submit: send_url"> 
-				<div class="form-group" style="text-align:center">
-				<input data-bind="value: url_field" type="url" class="form-control" placeholder="url please"><br>
-				<input type="submit" class="btn btn-default" value="quiz me">
-			</form>
-		  </div>
-
-			<div class="bg-info container-fluid">
-			<span id="plain-text-content" data-bind="text: myTextBox"></s>
-			</div>
-    </div><!-- knockout viewmodel -->
+					<div class="animated fadeInDown wow">
+						<form id="url-form" data-bind="submit: send_url"> 
+							<div class="form-group" style="text-align:center">
+							<input data-bind="value: url_field" type="url" class="form-control" placeholder="url please"><br>
+							<input type="submit" class="btn btn-default" value="quiz me">
+						</form>
+					</div><!-- knockout viewmodel -->
 
 					
 					
@@ -129,21 +124,26 @@ function resizeText() {
 </div>
 
 
-<section id="work_outer" style="display: none">
+<section id="work_outer">
 <div class="top_cont_latest">
   <div class="container">
     <h2>Questions</h2>
     <div class="work_section">
       <div class="row">
         <div class="col-lg-6 col-sm-6 wow fadeInLeft delay-05s">
-				
-          <div class="service-list">
-            <div class="service-list-col1"> <i class="icon-doc"></i> </div>
-            <div class="service-list-col2">
-              <h3>Question 1</h3>
-              <p>Possible Answer.</p>
-            </div>
-          </div>
+							<table class="table table-striped" id="user-trips-table">
+								<tbody data-bind="foreach: questionsArray">
+									<td>
+										<div class="service-list">
+											<div class="service-list-col1"> <i class="icon-doc"></i> </div>
+											<div class="service-list-col2">
+											<h3>Question <span data-bind="text: $index() + 1"></span></h3>
+											<p data-bind="text: $data">Possible Answer.</p>
+										</div>
+									</td>
+								</tbody>
+							</table>
+						</div>
         <figure class="col-lg-6 col-sm-6  text-right wow fadeInUp delay-02s"> </figure>
       </div>
     </div>
@@ -151,6 +151,9 @@ function resizeText() {
   </div>
 </section>
 <!--main-section-end--> 
+</div><!-- main div ended for Knockout-->
+
+
 
 <footer class="footer_section" id="contact">
   <div class="container">
