Changed name and cleaned up repo.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Informate - Recall what you read.</title>
+<title>Infomate - Recall what you read.</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -83,7 +83,7 @@ function resizeText() {
 <!--First slide-->
 <section  id="service">
   <div class="container">
-    <h2>Informate</h2>
+    <h2>Infomate</h2>
     <div class="service_area">
       <div class="row">
         <div class="col-lg-4">
