Small changes. Swapped out banner image.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,9 +68,11 @@ function resizeText() {
     <div class="header_section">
       <nav class="nav" id="nav">
         <ul class="toggle">
+					<li><a href="#service">Top</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="">
+					<li><a href="#service">Top</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
