--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,7 +100,7 @@ function resizeText() {
 					
 					<div class="animated fadeInDown wow">
 						<form id="url-form" data-bind="submit: send_url"> 
-							<div class="form-group" style="text-align:center">
+							<div id="urlInput" class="form-group" style="text-align:center">
 								<input data-bind="value: urlField" type="url" class="form-control" placeholder="url please"><br>
 								<input type="submit" class="btn btn-default" value="quiz me">
 							</div>
