--- a/views/home.ejs
+++ b/views/home.ejs
@@ -142,7 +142,7 @@ function resizeText() {
 									<h3><strong>Question <span data-bind="text: $index() + 1"></strong></span>:
 									 <span data-bind="text: question"></span></h3>
 									<p><span data-bind="text: name"></span> is</p>
-									<input data-bind="value: answer" type="url" class="form-control" placeholder="..."><br>
+									<input data-bind="value: $data.answer" type="url" class="form-control" placeholder="..."><br>
 								</div>
 							</td>
 						</tbody>
