--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,6 +154,31 @@ function resizeText() {
 				<div class="col-lg-3 col-sm-3"></div>
       </div>
     </div>
+
+    <h2>Watson Responses</h2>
+    <div class="work_section">
+      <div class="row">
+				<div class="col-lg-3 col-sm-3"></div>
+				<div class="col-lg-6 col-sm-6 wow fadeInLeft delay-05s">
+					<table class="table table-striped" id="user-trips-table">
+						<tbody data-bind="foreach: finalAnswers">
+							<td>
+								<div class="service-list">
+									<div class="service-list-col1"> <i class="icon-doc"></i> </div>
+									<div class="service-list-col2">
+									<h3><strong>Question <span data-bind="text: $index() + 1"></strong></span>:
+									 <span data-bind="text: $data.question"></span></h3>
+									<p data-bind="text: $data.answer"></p>
+								</div>
+							</td>
+						</tbody>
+					</table>
+				</div>
+				<div class="col-lg-3 col-sm-3"></div>
+      </div>
+
+
+
   </div>
   </div>
 </section>
